desktop-base (4.0.1) UNRELEASED; urgency=low

  [ Fathi Boudra ]
  * Fix KSplash theme moodin engine installation.

  [ Loic Minier ]
  * Depend on librsvg2-common for SVG support.

 -- Loic Minier <lool@dooz.org>  Mon, 22 Jan 2007 08:08:41 +0100

desktop-base (4.0.0) unstable; urgency=low

  [ Fathi Boudra ]
  * Add icon-session and icon-reboot to MoreBlue KDM Theme like GDM Theme.

  [ Loic Minier ]
  * Bump up version to 4.0; etch.

 -- Loic Minier <lool@dooz.org>  Mon, 11 Dec 2006 20:59:38 +0100

desktop-base (0.3.22) unstable; urgency=low

  * New GNOME wallpaper description; only holds the default GNOME wallpaper
    for now; thanks Martin-Éric Racine; closes: #333457.

 -- Loic Minier <lool@dooz.org>  Mon, 11 Dec 2006 18:02:02 +0100

desktop-base (0.3.21) unstable; urgency=high

  [ Gustavo Franco ]
  * debian/control:
    - Set Maintainer field to me.
    - Set Uploaders to current debian-desktop members.
  * debian/control.in: removed

  [ Loic Minier ]
  * Drop uploaders rule and gnome-pkg-tools build-dep.

  [ Fathi Boudra ]
  * Fix debian-background.svg and debian-blueish-wallpaper.svg for KDE.
  * Rename kde directory to kde-profile. More consistent with KIOSK Framework.
  * Add kdeglobals support.
  * Add Debian MoreBlue KDM Theme.
  * Add Debian MoreBlue KSplash Theme (Default and Moodin engine).

  [ Loic Minier ]
  * Urgency high for etch's KDE artwork.

 -- Loic Minier <lool@dooz.org>  Mon, 11 Dec 2006 16:43:23 +0100

desktop-base (0.3.20) unstable; urgency=high

  [ Yves-Alexis Perez ]
  * Correct xfce4-session.rc file to add failsafe session so xfce4-session
    doesn't crash.

  [ Loic Minier ]
  * Upload; high urgency because the above changes are blocking another
    upload, even if the affected files are not useful yet.

 -- Loic Minier <lool@dooz.org>  Mon, 27 Nov 2006 12:16:05 +0100

desktop-base (0.3.19) unstable; urgency=low

  * Install configuration dirs for KDE and Xfce settings which will provide