@@ -10,23 +10,23 @@
 	<!-- swirl -->
 	<item type="svg">
 		<normal file="swirl.svg"/>
-		<pos x="-300" y="-300" width="250" height="290"/>
+		<pos x="-300" y="-320" width="250" height="290"/>
 	</item>
 
 	<item type="pixmap">
 		<normal file="boundingbox.png"/>
 		<pos anchor="c" x="50%" y="50%" width="400" height="282"/>
 
+		<!-- Welcome -->
+		<item type="label">
+			<pos anchor="nc" x="50%" y="18%"/>
+			<normal color="#000000" font="Sans Bold 18"/>
+			<stock type="welcome-label"/>
+		</item>
+
 		<item type="rect">
 			<normal color="#ffff00" alpha="0.0"/>
 			<pos anchor="e" x="50%" y="50%" width="190" height="180"/>
-
-			<!-- Welcome -->
-			<item type="label">
-				<pos x="50%" y="0"/>
-				<normal color="#000000" font="Sans Bold 18"/>
-				<stock type="welcome-label"/>
-			</item>
 
 			<!-- username-label -->
 			<item type="label">
@@ -127,7 +127,7 @@
 	<!-- clock -->
 	<item type="label" id="clock">
 		<normal color="#ffffff" font="Sans Bold 11"/>
-		<pos x="-140" y="30"/>
+		<pos anchor="se" x="-20" y="-10"/>
 		<text>%c</text>
 	</item>
 </item>
