@@ -1,2 +1,2 @@
-USETHEME="true"
-THEME="/usr/share/apps/kdm/themes/debian-moreblue"
+#USETHEME="true"
+#THEME="/usr/share/apps/kdm/themes/debian-moreblue"
